fix project card colours in dark mode

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,3 +44,6 @@
 *****************************************************************************/
 
 // TODO: redefine projects layout.
+.card-body{
+  background-color: var(--global-project-card-color);
+}
