--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -31,6 +31,7 @@ html[data-theme='dark'] {
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
   --global-icon-color: navajowhite;
+  --global-project-card-color: #{$grey-color-slightly-light};
 
   .fa-sun {
     padding-left: 10px;
