--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -27,6 +27,7 @@ $yellow-color:        #efcc00 !default;
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     darken($grey-color, 25%);
+$grey-color-slightly-light:          lighten($grey-color, 20%);
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
